--- a/exercises/46 - Arrays/array-loopings-methods-START.html
+++ b/exercises/46 - Arrays/array-loopings-methods-START.html
@@ -133,8 +133,8 @@
 			]
 
 			/*
-			   Looping Methods
-			 */
+						   Looping Methods
+						 */
 
 			function logTopping(topping, index, originalArray) {
 				const nextTopping = originalArray[index + 1]
@@ -202,7 +202,48 @@
 				}
 			})
 
-			console.table(cleanPeople)
+			// console.table(cleanPeople)
+
+			const over40 = cleanPeople.filter((person) => person.age > 40)
+			// console.table(over40)
+			function findById(id) {
+				return function isStudent(student) {
+					return student.id === id
+				}
+			}
+
+			function findByProp(prop, propWeAreLookingFor) {
+				return function isStudent(student) {
+					return student[prop] === propWeAreLookingFor
+				}
+			}
+			const student = students.find(findByProp('id', 'de5f'))
+			const student2 = students.find(findByProp('first_name', 'Micki'))
+			// console.log(student, student2)
+			function tallyNumbers(tally, currentTotal) {
+				// console.log(`The current tally is ${tally}`)
+				// console.log(`The current total is ${currentTotal}`)
+				// console.log(`----------`)
+				return tally + currentTotal
+			}
+			const allOrders = orderTotals.reduce(tallyNumbers, 0)
+			console.log(allOrders)
+
+			function inventoryReducer(totals, item) {
+				console.log(`Looping over ${item.type}`)
+				// increment the type by 1
+				totals.shirt = totals.shirt + 1 || 1
+				// return the totals, so the next loop can use it
+				return totals
+			}
+			const inventoryCounts = inventory.reduce(inventoryReducer, {})
+			console.log(inventoryCounts)
+
+			const totalInventoryPrice = inventory.reduce(
+				(acc, item) => acc + item.price,
+				0
+			)
+			console.log(totalInventoryPrice)
 		</script>
 	</body>
 </html>
